--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "chai-bignumber": "3.0.0",
     "formik": "^2.2.6",
     "ipfs-api": "^26.1.2",
+    "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "react": "16.8.4",
     "react-bootstrap": "1.5.2",
     "react-dom": "16.8.4",
     "react-dropzone": "^11.3.2",
     "react-modal": "^3.12.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
     "truffle": "5.3.1",
     "web3": "1.0.0-beta.55",
