--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
     "truffle": "5.3.1",
+    "typescript": "^4.2.4",
     "web3": "1.0.0-beta.55",
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start --no-cache",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node-env-run src/server --exec nodemon ",
+    "dev": "run-p server start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,5 +47,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-env-run": "^4.0.2",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5"
+  }
 }
