--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "react-scripts": "2.1.3",
     "truffle": "5.3.1",
     "typescript": "^4.2.4",
+    "uuidv4": "^6.2.7",
     "web3": "1.0.0-beta.55",
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --no-cache",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node-env-run src/server --exec nodemon ",
+    "server": "node-env-run src/server --exec nodemon",
     "dev": "run-p server start"
   },
   "eslintConfig": {
