--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "formik": "^2.2.6",
     "ipfs-api": "^26.1.2",
     "lodash": "^4.17.21",
+    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
+    "path": "^0.12.7",
     "react": "16.8.4",
     "react-bootstrap": "1.5.2",
     "react-dom": "16.8.4",
