--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "An Ethereum Marketplace",
   "author": "gregory@dappuniversity.com",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@openzeppelin/contracts": "^4.0.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -15,6 +18,7 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "feather-icons-react": "^0.4.3",
     "formik": "^2.2.6",
     "ipfs-api": "^26.1.2",
     "lodash": "^4.17.21",
@@ -23,8 +27,11 @@
     "path": "^0.12.7",
     "react": "16.8.4",
     "react-bootstrap": "1.5.2",
+    "react-confirm": "^0.1.23",
     "react-dom": "16.8.4",
     "react-dropzone": "^11.3.2",
+    "react-feather": "^2.0.9",
+    "react-fontawesome": "^1.7.1",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
