--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "truffle": "5.3.1",
     "typescript": "^4.2.4",
     "uuidv4": "^6.2.7",
+    "web-social-share": "^7.1.0",
     "web3": "1.0.0-beta.55",
     "yup": "^0.32.9"
   },
