--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
+    "react-share": "^4.4.0",
     "react-toastify": "^7.0.4",
     "truffle": "5.3.1",
     "typescript": "^4.2.4",
     "uuidv4": "^6.2.7",
-    "web-social-share": "^7.1.0",
     "web3": "1.0.0-beta.55",
     "yup": "^0.32.9"
   },
